# src/restaurant-practice/Entities/employee.entity.ts
@@ -1,7 +1,8 @@
 import { Dateschema } from "src/polls/database-type-orm/Entities/date.entity";
-import { Column, Entity, ManyToOne, PrimaryGeneratedColumn } from "typeorm";
-import { Roles } from "../Orders/orders.entities/employee.entites";
+import { BeforeInsert, Column, Entity, ManyToOne, PrimaryGeneratedColumn } from "typeorm";
+import { Roles } from "./roles.entities";
 import { publicEncrypt } from "crypto";
+import * as bycrypt from 'bcrypt';
 
 
 @Entity('employees')
@@ -27,9 +28,14 @@ export class Employee {
     @Column()
     phoneNumber:number
 
-    @ManyToOne(() => Roles, (roles) => roles.employees)
+    @ManyToOne(() => Roles, (roles) => roles.employees, {eager : false})
     roles:Roles
 
     @Column(() => Dateschema)
     date:Dateschema
+
+    @BeforeInsert()
+    hashPassword() {
+        this.password= bycrypt.hashSync(this.password, 10);
+    }
 }
